@@ -10,8 +10,8 @@ inits, n.chains = 1, n.adapt = 1000, quiet = FALSE)
     cl <- evalParallelArgument(cl, quit=TRUE)
     if (!inherits(cl, "cluster"))
         stop("cl must be of class 'cluster'")
-    if (length(cl) != n.chains)
-        stop("length(cl) must equal n.chains")
+    if (length(cl) < n.chains)
+        stop("length(cl) < n.chains")
     if (is.function(file) || inherits(file, "custommodel")) {
         if (is.function(file))
             file <- match.fun(file)
@@ -53,7 +53,7 @@ inits, n.chains = 1, n.adapt = 1000, quiet = FALSE)
         getwd() else NULL
     snowWrapper(cl, 1:n.chains, jagsparallel, cldata, 
         name=NULL, use.env=TRUE,
-        lib = "dclone", balancing = "none", size = 1, 
+        lib = c("dclone", "rjags"), balancing = "none", size = 1, 
         rng.type = getOption("dcoptions")$RNG, 
         cleanup = TRUE, dir = dir, unload=FALSE)
 }
